--- a/zotero2.bib
+++ b/zotero2.bib
@@ -1,4 +1,164 @@
 
+@online{open_ai_ai_2018,
+	title = {{AI} and Compute},
+	url = {https://openai.com/blog/ai-and-compute/},
+	author = {{Open AI}},
+	urldate = {2022-08-19},
+	date = {2018},
+}
+
+@misc{open_ai_gpt-4_2023,
+	title = {{GPT}-4 Technical Report},
+	url = {http://arxiv.org/abs/2303.08774},
+	doi = {10.48550/arXiv.2303.08774},
+	abstract = {We report the development of {GPT}-4, a large-scale, multimodal model which can accept image and text inputs and produce text outputs. While less capable than humans in many real-world scenarios, {GPT}-4 exhibits human-level performance on various professional and academic benchmarks, including passing a simulated bar exam with a score around the top 10\% of test takers. {GPT}-4 is a Transformer-based model pre-trained to predict the next token in a document. The post-training alignment process results in improved performance on measures of factuality and adherence to desired behavior. A core component of this project was developing infrastructure and optimization methods that behave predictably across a wide range of scales. This allowed us to accurately predict some aspects of {GPT}-4's performance based on models trained with no more than 1/1,000th the compute of {GPT}-4.},
+	number = {{arXiv}:2303.08774},
+	publisher = {{arXiv}},
+	author = {Open {AI}},
+	urldate = {2023-06-24},
+	date = {2023-03-27},
+	eprinttype = {arxiv},
+	eprint = {2303.08774 [cs]},
+	keywords = {Computer Science - Artificial Intelligence, Computer Science - Computation and Language},
+}
+
+@inproceedings{zhou_distilling_2021,
+	location = {Montreal, Canada},
+	title = {Distilling Holistic Knowledge With Graph Neural Networks},
+	series = {{ICCV}'21},
+	pages = {10387--10396},
+	booktitle = {Proceedings of the {IEEE}/{CVF} International Conference on Computer Vision},
+	publisher = {{IEEE}},
+	author = {Zhou, Sheng and Wang, Yucheng and Chen, Defang and Chen, Jiawei and Wang, Xin and Wang, Can and Bu, Jiajun},
+	date = {2021-10},
+}
+
+@inproceedings{ho_random_1995,
+	location = {Montreal, Canada},
+	title = {Random decision forests},
+	volume = {1},
+	isbn = {978-0-8186-7128-9},
+	url = {http://ieeexplore.ieee.org/document/598994/},
+	doi = {10.1109/ICDAR.1995.598994},
+	eventtitle = {3rd International Conference on Document Analysis and Recognition},
+	pages = {278--282},
+	booktitle = {Proceedings of 3rd International Conference on Document Analysis and Recognition},
+	publisher = {{IEEE}},
+	author = {Ho, Tin Kam},
+	urldate = {2023-07-01},
+	date = {1995},
+}
+
+@inproceedings{sahoo_online_2018,
+	location = {Stockholm, Sweden},
+	title = {Online Deep Learning: Learning Deep Neural Networks on the Fly},
+	isbn = {978-0-9992411-2-7},
+	url = {https://www.ijcai.org/proceedings/2018/369},
+	doi = {10.24963/ijcai.2018/369},
+	series = {{IJCAI}'18},
+	shorttitle = {Online Deep Learning},
+	abstract = {Deep Neural Networks ({DNNs}) are typically trained by backpropagation in a batch setting, requiring the entire training data to be made available prior to the learning task. This is not scalable for many real-world scenarios where new data arrives sequentially in a stream. We aim to address an open challenge of ``Online Deep Learning" ({ODL}) for learning {DNNs} on the fly in an online setting. Unlike traditional online learning that often optimizes some convex objective function with respect to a shallow model (e.g., a linear/kernel-based hypothesis), {ODL} is more challenging as the optimization objective is non-convex, and regular {DNN} with standard backpropagation does not work well in practice for online settings. We present a new {ODL} framework that attempts to tackle the challenges by learning {DNN} models which dynamically adapt depth from a sequence of training data in an online learning setting. Specifically, we propose a novel Hedge Backpropagation ({HBP}) method for online updating the parameters of {DNN} effectively, and validate the efficacy on large data sets (both stationary and concept drifting scenarios).},
+	eventtitle = {27th International Joint Conference on Artificial Intelligence},
+	pages = {2660--2666},
+	booktitle = {Proceedings of the 27th International Joint Conference on Artificial Intelligence},
+	publisher = {{AAAI} Press},
+	author = {Sahoo, Doyen and Pham, Quang and Lu, Jing and Hoi, Steven C. H.},
+	urldate = {2023-06-28},
+	date = {2018-07},
+	langid = {english},
+}
+
+@inproceedings{czarnecki_understanding_2017,
+	location = {Sydney, Australia},
+	title = {Understanding Synthetic Gradients and Decoupled Neural Interfaces},
+	volume = {70},
+	series = {{ICML}'17},
+	abstract = {When training neural networks, the use of Synthetic Gradients ({SG}) allows layers or modules to be trained without update locking - without waiting for a true error gradient to be backpropagated - resulting in Decoupled Neural Interfaces ({DNIs}). This unlocked ability of being able to update parts of a neural network asynchronously and with only local information was demonstrated to work empirically in Jaderberg et al. (2016). However, there has been very little demonstration of what changes {DNIs} and {SGs} impose from a functional, representational, and learning dynamics point of view. In this paper, we study {DNIs} through the use of synthetic gradients on feed-forward networks to better understand their behaviour and elucidate their effect on optimisation. We show that the incorporation of {SGs} does not affect the representational strength of the learning system for a neural network, and prove the convergence of the learning system for linear and deep linear models. On practical problems we investigate the mechanism by which synthetic gradient estimators approx-imate the true loss, and, surprisingly, how that leads to drastically different layer-wise representations. Finally, we also expose the relationship of using synthetic gradients to other error approximation techniques and find a unifying language for discussion and comparison.},
+	pages = {904--912},
+	booktitle = {Proceedings of the 34th International Conference on Machine Learning},
+	publisher = {{PMLR}},
+	author = {Czarnecki, Wojciech Marian and Swirszcz, Grzegorz and Jaderberg, Max and Osindero, Simon and Vinyals, Oriol and Kavukcuoglu, Koray},
+	editor = {Precup, Doina and Teh, Yee Whye},
+	date = {2017},
+	note = {Place: Sydney, {NSW}, Australia},
+}
+
+@inproceedings{taylor_training_2016,
+	location = {New York, {NY}, {USA}},
+	title = {Training Neural Networks without Gradients: A Scalable {ADMM} Approach},
+	volume = {48},
+	series = {{ICML}'16},
+	abstract = {With the growing importance of large network models and enormous training datasets, {GPUs} have become increasingly necessary to train neural networks. This is largely because conventional optimization algorithms rely on stochastic gradient methods that don't scale well to large numbers of cores in a cluster setting. Furthermore, the convergence of all gradient methods, including batch methods, suffers from common problems like saturation effects, poor conditioning, and saddle points. This paper explores an unconventional training method that uses alternating direction methods and Bregman iteration to train networks without gradient descent steps. The proposed method reduces the network training problem to a sequence of minimization substeps that can each be solved globally in closed form. The proposed method is advantageous because it avoids many of the caveats that make gradient methods slow on highly nonconvex problems. The method exhibits strong scaling in the distributed setting, yielding linear speedups even when split over thousands of cores.},
+	pages = {2722--2731},
+	booktitle = {Proceedings of the 33rd International Conference on International Conference on Machine Learning - Volume 48},
+	publisher = {{PMLR}},
+	author = {Taylor, Gavin and Burmeister, Ryan and Xu, Zheng and Singh, Bharat and Patel, Ankit and Goldstein, Tom},
+	date = {2016},
+	note = {Place: New York, {NY}, {USA}},
+}
+
+@inproceedings{ioffe_batch_2015,
+	location = {Lille, France},
+	title = {Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift},
+	volume = {37},
+	series = {{ICML}'15},
+	abstract = {Training Deep Neural Networks is complicated by the fact that the distribution of each layer's inputs changes during training, as the parameters of the previous layers change. This slows down the training by requiring lower learning rates and careful parameter initialization, and makes it notoriously hard to train models with saturating nonlinearities. We refer to this phenomenon as internal covariate shift, and address the problem by normalizing layer inputs. Our method draws its strength from making normalization a part of the model architecture and performing the normalization for each training mini-batch. Batch Normalization allows us to use much higher learning rates and be less careful about initialization, and in some cases eliminates the need for Dropout. Applied to a state-of-the-art image classification model, Batch Normalization achieves the same accuracy with 14 times fewer training steps, and beats the original model by a significant margin. Using an ensemble of batch-normalized networks, we improve upon the best published result on {ImageNet} classification: reaching 4.82\% top-5 test error, exceeding the accuracy of human raters.},
+	pages = {448--456},
+	booktitle = {Proceedings of the 32nd International Conference on International Conference on Machine Learning},
+	publisher = {{PMLR}},
+	author = {Ioffe, Sergey and Szegedy, Christian},
+	editor = {Bach, Francis and Blei, David},
+	date = {2015},
+	note = {Place: Lille, France},
+}
+
+@inproceedings{ngiam_multimodal_2011,
+	location = {Bellevue, {DC}, {USA}},
+	title = {Multimodal Deep Learning},
+	isbn = {978-1-4503-0619-5},
+	series = {{ICML}'11},
+	abstract = {Deep networks have been successfully applied to unsupervised feature learning for single modalities (e.g., text, images or audio). In this work, we propose a novel application of deep networks to learn features over multiple modalities. We present a series of tasks for multimodal learning and show how to train deep networks that learn features to address these tasks. In particular, we demonstrate cross modality feature learning, where better features for one modality (e.g., video) can be learned if multiple modalities (e.g., audio and video) are present at feature learning time. Furthermore, we show how to learn a shared representation between modalities and evaluate it on a unique task, where the classifier is trained with audio-only data but tested with video-only data and vice-versa. Our models are validated on the {CUAVE} and {AVLetters} datasets on audio-visual speech classification, demonstrating best published visual speech classification on {AVLetters} and effective shared representation learning.},
+	pages = {689--696},
+	booktitle = {Proceedings of the 28th International Conference on International Conference on Machine Learning},
+	publisher = {{PMLR}},
+	author = {Ngiam, Jiquan and Khosla, Aditya and Kim, Mingyu and Nam, Juhan and Lee, Honglak and Ng, Andrew Y.},
+	editor = {Getoor, Lise and Scheffer, Tobias},
+	date = {2011},
+	note = {event-place: Bellevue, Washington, {USA}},
+}
+
+@article{russakovsky_imagenet_2015,
+	title = {{ImageNet} Large Scale Visual Recognition Challenge},
+	volume = {115},
+	issn = {0920-5691, 1573-1405},
+	url = {http://link.springer.com/10.1007/s11263-015-0816-y},
+	doi = {10.1007/s11263-015-0816-y},
+	series = {{IJCV}'15},
+	pages = {211--252},
+	number = {3},
+	journaltitle = {International Journal of Computer Vision},
+	shortjournal = {Int J Comput Vis},
+	author = {Russakovsky, Olga and Deng, Jia and Su, Hao and Krause, Jonathan and Satheesh, Sanjeev and Ma, Sean and Huang, Zhiheng and Karpathy, Andrej and Khosla, Aditya and Bernstein, Michael and Berg, Alexander C. and Fei-Fei, Li},
+	urldate = {2023-07-31},
+	date = {2015-12},
+	langid = {english},
+}
+
+@article{lecun_gradient-based_1998,
+	title = {Gradient-based learning applied to document recognition},
+	volume = {86},
+	issn = {00189219},
+	url = {http://ieeexplore.ieee.org/document/726791/},
+	doi = {10.1109/5.726791},
+	pages = {2278--2324},
+	number = {11},
+	journaltitle = {Proceedings of the {IEEE}},
+	shortjournal = {Proc. {IEEE}},
+	author = {{LeCun}, Yann and Bottou, Léon and Bengio, Yoshua and Haffner, Patrick},
+	urldate = {2023-06-30},
+	date = {1998-11},
+}
+
 @online{hui_machine_2017,
 	title = {Machine learning - Restricted Boltzmann Machines},
 	url = {https://jhui.github.io/2017/01/15/Machine-learning-Boltzmann-machines/},
@@ -279,17 +439,6 @@ Publisher: Society for Neuroscience},
 	langid = {english},
 }
 
-@inproceedings{zhou_distilling_2021,
-	location = {Montreal, Canada},
-	title = {Distilling Holistic Knowledge With Graph Neural Networks},
-	series = {{ICCV}'21},
-	pages = {10387--10396},
-	booktitle = {Proceedings of the {IEEE}/{CVF} International Conference on Computer Vision},
-	publisher = {{IEEE} Computer Society Press},
-	author = {Zhou, Sheng and Wang, Yucheng and Chen, Defang and Chen, Jiawei and Wang, Xin and Wang, Can and Bu, Jiajun},
-	date = {2021-10},
-}
-
 @inproceedings{zhang_convergent_2017,
 	location = {Long Beach, {CA}, {USA}},
 	title = {Convergent Block Coordinate Descent for Training Tikhonov Regularized Deep Neural Networks},
@@ -368,20 +517,6 @@ Publisher: Society for Neuroscience},
 	author = {Teichmann, Michael and Hamker, Fred},
 	editor = {Hammer, Barbara and Martinetz, Thomas and Villmann, Thomas},
 	date = {2015-03},
-}
-
-@inproceedings{taylor_training_2016,
-	location = {New York, {NY}, {USA}},
-	title = {Training Neural Networks without Gradients: A Scalable {ADMM} Approach},
-	volume = {48},
-	series = {{ICML}'16},
-	abstract = {With the growing importance of large network models and enormous training datasets, {GPUs} have become increasingly necessary to train neural networks. This is largely because conventional optimization algorithms rely on stochastic gradient methods that don't scale well to large numbers of cores in a cluster setting. Furthermore, the convergence of all gradient methods, including batch methods, suffers from common problems like saturation effects, poor conditioning, and saddle points. This paper explores an unconventional training method that uses alternating direction methods and Bregman iteration to train networks without gradient descent steps. The proposed method reduces the network training problem to a sequence of minimization substeps that can each be solved globally in closed form. The proposed method is advantageous because it avoids many of the caveats that make gradient methods slow on highly nonconvex problems. The method exhibits strong scaling in the distributed setting, yielding linear speedups even when split over thousands of cores.},
-	pages = {2722--2731},
-	booktitle = {Proceedings of the 33rd International Conference on International Conference on Machine Learning - Volume 48},
-	publisher = {{JMLR}.org},
-	author = {Taylor, Gavin and Burmeister, Ryan and Xu, Zheng and Singh, Bharat and Patel, Ankit and Goldstein, Tom},
-	date = {2016},
-	note = {Place: New York, {NY}, {USA}},
 }
 
 @inproceedings{sabour_dynamic_2017,
@@ -473,21 +608,6 @@ Publisher: Society for Neuroscience},
 	author = {Nøkland, Arild and Eidnes, Lars Hiller},
 	editor = {Chaudhuri, Kamalika and Salakhutdinov, Ruslan},
 	date = {2019-06-09},
-}
-
-@inproceedings{ngiam_multimodal_2011,
-	location = {Bellevue, {DC}, {USA}},
-	title = {Multimodal Deep Learning},
-	isbn = {978-1-4503-0619-5},
-	series = {{ICML}'11},
-	abstract = {Deep networks have been successfully applied to unsupervised feature learning for single modalities (e.g., text, images or audio). In this work, we propose a novel application of deep networks to learn features over multiple modalities. We present a series of tasks for multimodal learning and show how to train deep networks that learn features to address these tasks. In particular, we demonstrate cross modality feature learning, where better features for one modality (e.g., video) can be learned if multiple modalities (e.g., audio and video) are present at feature learning time. Furthermore, we show how to learn a shared representation between modalities and evaluate it on a unique task, where the classifier is trained with audio-only data but tested with video-only data and vice-versa. Our models are validated on the {CUAVE} and {AVLetters} datasets on audio-visual speech classification, demonstrating best published visual speech classification on {AVLetters} and effective shared representation learning.},
-	pages = {689--696},
-	booktitle = {Proceedings of the 28th International Conference on International Conference on Machine Learning},
-	publisher = {{ACM}},
-	author = {Ngiam, Jiquan and Khosla, Aditya and Kim, Mingyu and Nam, Juhan and Lee, Honglak and Ng, Andrew Y.},
-	editor = {Getoor, Lise and Scheffer, Tobias},
-	date = {2011},
-	note = {event-place: Bellevue, Washington, {USA}},
 }
 
 @inproceedings{najarro_meta-learning_2020,
@@ -627,21 +747,6 @@ Publisher: Society for Neuroscience},
 	date = {2017-08-06},
 }
 
-@inproceedings{ioffe_batch_2015,
-	location = {Lille, France},
-	title = {Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift},
-	volume = {37},
-	series = {{ICML}'15},
-	abstract = {Training Deep Neural Networks is complicated by the fact that the distribution of each layer's inputs changes during training, as the parameters of the previous layers change. This slows down the training by requiring lower learning rates and careful parameter initialization, and makes it notoriously hard to train models with saturating nonlinearities. We refer to this phenomenon as internal covariate shift, and address the problem by normalizing layer inputs. Our method draws its strength from making normalization a part of the model architecture and performing the normalization for each training mini-batch. Batch Normalization allows us to use much higher learning rates and be less careful about initialization, and in some cases eliminates the need for Dropout. Applied to a state-of-the-art image classification model, Batch Normalization achieves the same accuracy with 14 times fewer training steps, and beats the original model by a significant margin. Using an ensemble of batch-normalized networks, we improve upon the best published result on {ImageNet} classification: reaching 4.82\% top-5 test error, exceeding the accuracy of human raters.},
-	pages = {448--456},
-	booktitle = {Proceedings of the 32nd International Conference on International Conference on Machine Learning},
-	publisher = {{JMLR}.org},
-	author = {Ioffe, Sergey and Szegedy, Christian},
-	editor = {Bach, Francis and Blei, David},
-	date = {2015},
-	note = {Place: Lille, France},
-}
-
 @inproceedings{grattarola_learning_2021,
 	location = {Online},
 	title = {Learning Graph Cellular Automata},
@@ -686,21 +791,6 @@ Publisher: Society for Neuroscience},
 	author = {Fritzke, Bernd},
 	editor = {Tesauro, Gerald and Touretzky, David S. and Leen, Todd K.},
 	date = {1994},
-}
-
-@inproceedings{czarnecki_understanding_2017,
-	location = {Sydney, Australia},
-	title = {Understanding Synthetic Gradients and Decoupled Neural Interfaces},
-	volume = {70},
-	series = {{ICML}'17},
-	abstract = {When training neural networks, the use of Synthetic Gradients ({SG}) allows layers or modules to be trained without update locking - without waiting for a true error gradient to be backpropagated - resulting in Decoupled Neural Interfaces ({DNIs}). This unlocked ability of being able to update parts of a neural network asynchronously and with only local information was demonstrated to work empirically in Jaderberg et al. (2016). However, there has been very little demonstration of what changes {DNIs} and {SGs} impose from a functional, representational, and learning dynamics point of view. In this paper, we study {DNIs} through the use of synthetic gradients on feed-forward networks to better understand their behaviour and elucidate their effect on optimisation. We show that the incorporation of {SGs} does not affect the representational strength of the learning system for a neural network, and prove the convergence of the learning system for linear and deep linear models. On practical problems we investigate the mechanism by which synthetic gradient estimators approx-imate the true loss, and, surprisingly, how that leads to drastically different layer-wise representations. Finally, we also expose the relationship of using synthetic gradients to other error approximation techniques and find a unifying language for discussion and comparison.},
-	pages = {904--912},
-	booktitle = {Proceedings of the 34th International Conference on Machine Learning},
-	publisher = {{JMLR}.org},
-	author = {Czarnecki, Wojciech Marian and Swirszcz, Grzegorz and Jaderberg, Max and Osindero, Simon and Vinyals, Oriol and Kavukcuoglu, Koray},
-	editor = {Precup, Doina and Teh, Yee Whye},
-	date = {2017},
-	note = {Place: Sydney, {NSW}, Australia},
 }
 
 @inproceedings{bengio_flow_2021,
@@ -930,22 +1020,6 @@ Publisher: Society for Neuroscience},
 	date = {2017-05},
 }
 
-@inproceedings{ho_random_1995,
-	location = {Montreal, Canada},
-	title = {Random decision forests},
-	volume = {1},
-	isbn = {978-0-8186-7128-9},
-	url = {http://ieeexplore.ieee.org/document/598994/},
-	doi = {10.1109/ICDAR.1995.598994},
-	eventtitle = {3rd International Conference on Document Analysis and Recognition},
-	pages = {278--282},
-	booktitle = {Proceedings of 3rd International Conference on Document Analysis and Recognition},
-	publisher = {{IEEE} Computer Society Press},
-	author = {Ho, Tin Kam},
-	urldate = {2023-07-01},
-	date = {1995},
-}
-
 @inproceedings{he_deep_2016,
 	location = {Las Vegas, {NV}, {USA}},
 	title = {Deep Residual Learning for Image Recognition},
@@ -1007,25 +1081,6 @@ Publisher: Society for Neuroscience},
 	eprinttype = {arxiv},
 	eprint = {2102.12627 [cs]},
 	keywords = {Computer Science - Computer Vision and Pattern Recognition, I.2.6, I.4.8},
-}
-
-@inproceedings{sahoo_online_2018,
-	location = {Stockholm, Sweden},
-	title = {Online Deep Learning: Learning Deep Neural Networks on the Fly},
-	isbn = {978-0-9992411-2-7},
-	url = {https://www.ijcai.org/proceedings/2018/369},
-	doi = {10.24963/ijcai.2018/369},
-	series = {{IJCAI}'18},
-	shorttitle = {Online Deep Learning},
-	abstract = {Deep Neural Networks ({DNNs}) are typically trained by backpropagation in a batch setting, requiring the entire training data to be made available prior to the learning task. This is not scalable for many real-world scenarios where new data arrives sequentially in a stream. We aim to address an open challenge of ``Online Deep Learning" ({ODL}) for learning {DNNs} on the fly in an online setting. Unlike traditional online learning that often optimizes some convex objective function with respect to a shallow model (e.g., a linear/kernel-based hypothesis), {ODL} is more challenging as the optimization objective is non-convex, and regular {DNN} with standard backpropagation does not work well in practice for online settings. We present a new {ODL} framework that attempts to tackle the challenges by learning {DNN} models which dynamically adapt depth from a sequence of training data in an online learning setting. Specifically, we propose a novel Hedge Backpropagation ({HBP}) method for online updating the parameters of {DNN} effectively, and validate the efficacy on large data sets (both stationary and concept drifting scenarios).},
-	eventtitle = {27th International Joint Conference on Artificial Intelligence},
-	pages = {2660--2666},
-	booktitle = {Proceedings of the 27th International Joint Conference on Artificial Intelligence},
-	publisher = {International Joint Conferences on Artificial Intelligence Organization},
-	author = {Sahoo, Doyen and Pham, Quang and Lu, Jing and Hoi, Steven C. H.},
-	urldate = {2023-06-28},
-	date = {2018-07},
-	langid = {english},
 }
 
 @inproceedings{peters_deep_2018,
@@ -2272,21 +2327,6 @@ Version Number: 2},
 	urldate = {2023-07-02},
 	date = {1927-12},
 	langid = {english},
-}
-
-@article{lecun_gradient-based_1998,
-	title = {Gradient-based learning applied to document recognition},
-	volume = {86},
-	issn = {00189219},
-	url = {http://ieeexplore.ieee.org/document/726791/},
-	doi = {10.1109/5.726791},
-	pages = {2278--2324},
-	number = {11},
-	journaltitle = {Proceedings of the {IEEE}},
-	shortjournal = {Proc. {IEEE}},
-	author = {Lecun, Yann and Bottou, Léon and Bengio, Yoshua and Haffner, Patrick},
-	urldate = {2023-06-30},
-	date = {1998-11},
 }
 
 @article{kolmogorov_tables_1998,
@@ -4107,14 +4147,6 @@ Version Number: 2},
 	keywords = {Computer Science - Computation and Language},
 }
 
-@online{open_ai_ai_2018,
-	title = {{AI} and Compute},
-	url = {https://openai.com/blog/ai-and-compute/},
-	author = {{Open AI}},
-	urldate = {2022-08-19},
-	date = {2018},
-}
-
 @misc{kumar_fundamental_2015,
 	title = {Fundamental Limits to Moore's Law},
 	url = {http://arxiv.org/abs/1511.05956},
@@ -4814,21 +4846,6 @@ matching state-of-the-art model-free and model-based algorithms on {MuJoCo} cont
 	eprinttype = {arxiv},
 	eprint = {2304.01852 [cs]},
 	keywords = {Computer Science - Computation and Language},
-}
-
-@misc{openai_gpt-4_2023,
-	title = {{GPT}-4 Technical Report},
-	url = {http://arxiv.org/abs/2303.08774},
-	doi = {10.48550/arXiv.2303.08774},
-	abstract = {We report the development of {GPT}-4, a large-scale, multimodal model which can accept image and text inputs and produce text outputs. While less capable than humans in many real-world scenarios, {GPT}-4 exhibits human-level performance on various professional and academic benchmarks, including passing a simulated bar exam with a score around the top 10\% of test takers. {GPT}-4 is a Transformer-based model pre-trained to predict the next token in a document. The post-training alignment process results in improved performance on measures of factuality and adherence to desired behavior. A core component of this project was developing infrastructure and optimization methods that behave predictably across a wide range of scales. This allowed us to accurately predict some aspects of {GPT}-4's performance based on models trained with no more than 1/1,000th the compute of {GPT}-4.},
-	number = {{arXiv}:2303.08774},
-	publisher = {{arXiv}},
-	author = {{OpenAI}},
-	urldate = {2023-06-24},
-	date = {2023-03-27},
-	eprinttype = {arxiv},
-	eprint = {2303.08774 [cs]},
-	keywords = {Computer Science - Artificial Intelligence, Computer Science - Computation and Language},
 }
 
 @misc{bubeck_sparks_2023,
